# IMU-Sensor-Fusion

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: ComplementaryFilter.h  Config.h  RunApp.h
include/communication/: USBReceiver.h  USBSession.h  WebSocketSession.h
include/ui/: ImGuiPanel.h  ImPlotPanel.h  RayLibScene.h  RunApp.h  SensorPlot.h
include/util/: Attitude.h  Math3D.h  Quaternion.h  Structs3D.h  ThreadSafeRingBuffer.h  ThreadSafeRingBuffer3D.h
resources/: obj.mtl
src/: ComplementaryFilter.cpp  RunApp.cpp  WebSocketSession.cpp  main.cpp
src/communication/: USBReceiver.cpp  USBSession.cpp  WebSocketSession.cpp
src/ui/: ImGuiPanel.cpp  ImPlotPanel.cpp  RayLibScene.cpp  RunApp.cpp
